--- a/javascript/index.html
+++ b/javascript/index.html
@@ -8,6 +8,7 @@
 <body>
     <p>JavaScript</p>
 </body>
+<script src="Account.js"></script>
 <script src="Car.js"></script>
 <script src="Main.js"></script>
 </html>
